added wave effect

--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.22",
     "ogl": "^1.0.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
+    "simplex-noise": "^4.0.3",
     "swiper": "^12.0.2",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "zod": "^4.1.11"
   },
